<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Indentificação Pet</string>
    <string name="senha">Senha</string>
    <string name="crie_conta">Crie a Sua Conta</string>
    <string name="acessar">Acessar</string>
    <string name="email">Email</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="voltar">←</string>
    <string name="indentifica_o_pet">Indentificação Pet</string>
    <string name="nome">Nome: Mutatis Nutandis Kurt</string>
    <string name="raca">Raça: Golden Retriever</string>
    <string name="idade">Idade: 5 anos</string>
    <string name="menu">☰</string>
    <string name="criar">➕</string>
    <string name="conter">A senha deve conter:</string>
    <string name="minimo">x Minimo de 6 caracteres</string>
    <string name="caracter_especial">x Minimo de um caracter especial</string>
    <string name="letra_maiscula">x Minimo de uma letra maiuscula</string>
    <string name="letra_minuscula">x Minimo de uma letra minuscula</string>
    <string name="nome_do_pet">Nome do Pet*</string>
    <string name="nascimento">Nascimento</string>
    <string name="nacsimento_dd_mm_aaaa">Nacsimento: dd/mm/aaaa</string>
    <string-array name="especie">
        <item android:id="@+id/selecione_um_item">Selecione um Item</item>
        <item android:id="@+id/cachorro">Cachorro</item>
        <item android:id="@+id/gato">Gato</item>
        <item android:id="@+id/ave">Pássaro</item>
    </string-array>
    <string-array name="sexo">
        <item android:id="@+id/selecione_um_item">Selecione um Item</item>
        <item>Macho</item>
        <item>Fêmea</item>
    </string-array>
    <string name="endereco">Endereço</string>
    <string name="endereco_rua_tal">Endereço: Rua Tal</string>
    <string name="bairro">Bairro</string>
    <string name="bairro_tal">Bairro: Tal</string>
    <string name="descricao">Descrição</string>
    <string name="tel_cel">Tel. Cel</string>
    <string name="tel_cel_48_99999_9999">Tel. Cel: 48 99999-9999</string>
    <string name="estado_sc">Estado: SC</string>
    <string-array name="estado">
        <item android:id="@+id/selecione_um_item">Selecione um Item</item>
        <item android:id="@+id/ac">AC</item>
        <item android:id="@+id/al">AL</item>
        <item android:id="@+id/ap">AP</item>
        <item android:id="@+id/am">AM</item>
        <item android:id="@+id/ba">BA</item>
        <item android:id="@+id/ce">CE</item>
        <item android:id="@+id/df">DF</item>
        <item android:id="@+id/es">ES</item>
        <item android:id="@+id/go">GO</item>
        <item android:id="@+id/ma">MA</item>
        <item android:id="@+id/mt">MT</item>
        <item android:id="@+id/ms">MS</item>
        <item android:id="@+id/mg">MG</item>
        <item android:id="@+id/pa">PA</item>
        <item android:id="@+id/pb">PB</item>
        <item android:id="@+id/pr">PR</item>
        <item android:id="@+id/pe">PE</item>
        <item android:id="@+id/pi">PI</item>
        <item android:id="@+id/rj">RJ</item>
        <item android:id="@+id/rn">RN</item>
        <item android:id="@+id/rs">RS</item>
        <item android:id="@+id/ro">RO</item>
        <item android:id="@+id/rr">RR</item>
        <item android:id="@+id/sc">SC</item>
        <item android:id="@+id/sp">SP</item>
        <item android:id="@+id/se">SE</item>
        <item android:id="@+id/to">TO</item>
    </string-array>
    <string name="cep_00000_000">CEP: 00000-000</string>
    <string name="cep">CEP</string>
    <string name="cor_dourado">Cor: Dourado</string>
    <string name="cor">Cor</string>
    <string name="naturalidade_criciuma">Naturalidade: Criciúma</string>
    <string name="naturalidade">Naturalidade</string>
    <string name="mae_nome_da_mae_do_pet">Mãe: Nome da Mãe do Pet</string>
    <string name="mae">Mãe</string>
    <string name="tel_resd">Tel. Resd</string>
    <string name="tel_resd_48_99999_9999">Tel. Resd: 48 99999-9999</string>
    <string name="email_nome_exemplo_gmail_com">Email: nome.exemplo@gmail.com</string>
    <string name="pai">Pai</string>
    <string name="pai_nome_do_pai_do_pet">Pai: Nome do Pai do Pet</string>
    <string name="cidade">Cidade*</string>
    <string name="salvar_pet">Salvar Pet</string>
    <string name="racac">Raça*</string>
    <string name="texto">Texto</string>
    <string name="meu_nome">Nome</string>
    <string name="informacoes_do_pet">Informações do Pet:</string>
    <string name="informacoes_do_dono_do_pet">Informações do Dono do Pet:</string>
    <string name="alterar_pet">Alterar Pet</string>
    <string name="sair">Sair</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="carregar_imagem">Carregar Imagem</string>
    <string name="configuracoes">Configurações</string>
    <string name="sobre">Sobre o App</string>
    <string name="sobre_app">🎉🐾 Apresentando o Identificação Pet: Seu Ingresso para Eventos Pet-Friendly! 🐾🎉

Chega de burocracia na hora de levar seu amigo de quatro patas para os melhores eventos! Com o Identificação Pet, seu pet tem uma carteira de identificação virtual completa na palma da sua mão. 📱✨

Desenvolvido pensando na sua comodidade e na segurança do seu companheiro, o Identificação Pet é o aplicativo essencial para quem adora frequentar eventos pet-friendly. Nossa missão é simplificar o acesso, garantindo que você e seu bichinho desfrutem de cada momento sem preocupações. 🥳🐕</string>
    <string name="sobre_app1">🔑 Principais Características do Identificação Pet:</string>
    <string name="sobre_topico">● Carteira de Identificação Virtual para Pets: 🆔 Crie um perfil completo para seu animal de estimação, com foto, nome, raça, informações de contato e características únicas. É a identificação perfeita para qualquer situação!</string>
    <string name="sobre_topico1">● Carteirinha de Vacinação Digital: 💉 Nunca mais perca a carteirinha de vacinação física! Tenha sempre à mão o histórico de vacinas do seu pet, facilitando a entrada em eventos que exigem a comprovação da imunização. Simples, rápido e seguro!</string>
    <string name="sobre_topico2">● Acesso Descomplicado a Eventos: 🎟️ O Identificação Pet foi criado com o objetivo principal de ser o seu ingresso digital para eventos exclusivos para pets. Basta apresentar a carteira virtual no aplicativo e pronto! A entrada é liberada, garantindo agilidade e praticidade para você e seu companheiro.</string>
    <string name="sobre_topico3">● Interface Intuitiva e Bonita: ✨ Navegue com facilidade por um design moderno e amigável. Adicione fotos fofas do seu pet, personalize o perfil e desfrute de uma experiência visual agradável.</string>
    <string name="sobre_topico4">● Segurança dos Dados: 🔒 Seus dados e os do seu pet estão seguros conosco. Priorizamos a privacidade e a proteção das suas informações.</string>
    <string name="sobre_app2">✨ Por Que Escolher o Identificação Pet?
Com o Identificação Pet, a diversão do seu pet está garantida! Imagine poder ir a feiras, exposições, parques temáticos e encontros de pets sem ter que se preocupar com pilhas de documentos. O aplicativo centraliza tudo o que você precisa, otimizando seu tempo e proporcionando uma experiência sem estresse.

Seja um festival de raças, uma corrida pet ou um evento beneficente, o Identificação Pet é o seu parceiro ideal para explorar o mundo pet-friendly com total tranquilidade. 🌍💖

Baixe agora o Identificação Pet e dê o próximo passo para uma vida mais conectada e cheia de aventuras com seu melhor amigo! 🚀🐶🐱</string>
    <string name="sobre_app3">Pronto para simplificar a vida do seu pet e a sua? Qual evento você e seu companheiro peludo estão ansiosos para visitar primeiro com o Identificação Pet? 🐾</string>
    <string name="menu_pets">Meus Pets</string>
    <string name="editar_pet">Editar Pet</string>
    <string name="deletar_pet">Deletar Pet</string>
    <string name="download_da_carteirinha">Download da Carteirinha</string>
    <string name="texto_meus_pets">Informações de seus pets, na palma da sua mão!</string>
    <string name="meus_pets">Meus Pets</string>
    <string name="sobre_o_app">Sobre o App</string>
    <string name="texto_sobre_app">Informações sobre o app</string>
    <string name="texto_crie_conta">Não tem conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="perfil_do_pet">Perfil do Pet</string>
    <string name="crie_o_seu_pet_aqui">Crie o seu pet aqui!</string>
    <string name="criar_pet">Criar Pet</string>
    <string name="inicio">Início</string>
    <string name="texto_inicio">Olá, nome! Como está seu pet hoje?</string>
    <string name="texto_inicio_meus_pets">Gerencie facilmente todos os seus companheiros</string>
    <string name="vacinacoes">Vacinações</string>
    <string name="assinatura_digital">Assinatura Digital</string>
    <string name="realizar_assinatura_digital">Realizar Assinatura Digital</string>
    <string-array name="raca_cachorro">
        <item android:id="@+id/selecione_um_item">Selecione um Item</item>
        <item android:id="@+id/golden_retriever">Golden Retriever</item>
        <item android:id="@+id/labrador_retriever">Labrador Retriever</item>
        <item android:id="@+id/husky_siberiano">Husky Siberiano</item>
        <item android:id="@+id/vira_lata">Vira-Lata</item>
        <item android:id="@+id/bulldog_ingles">Bulldog Inglês</item>
        <item android:id="@+id/bulldog_frances">Bulldog Francês</item>
        <item android:id="@+id/beagle">Beagle</item>
        <item android:id="@+id/poodle">Poodle</item>
        <item android:id="@+id/rottweiler">Rottweiler</item>
        <item android:id="@+id/pastor_alemao">Pastor Alemão</item>
    </string-array>
    <string-array name="raca_gato">
        <item android:id="@+id/selecione_um_item">Selecione um Item</item>
        <item android:id="@+id/siames">Siamês</item>
        <item android:id="@+id/persa">Persa</item>
        <item android:id="@+id/sphynx">Sphynx</item>
        <item android:id="@+id/maine_coon">Maine Coon</item>
        <item android:id="@+id/ragdoll">Ragdoll</item>
        <item android:id="@+id/bengal">Bengal</item>
        <item android:id="@+id/siberian_husky">Siberian Husky</item>
        <item android:id="@+id/american_shorthair">American Shorthair</item>
        <item android:id="@+id/persian">Persian</item>
    </string-array>
    <string-array name="raca_ave">
        <item android:id="@+id/selecione_um_item">Selecione um Item</item>
        <item android:id="@+id/canario">Canário</item>
        <item android:id="@+id/periquito">Periquito</item>
        <item android:id="@+id/calopsita">Calopsita</item>
        <item android:id="@+id/papagaio">Papagaio</item>
        <item android:id="@+id/arara">Arara</item>
        <item android:id="@+id/cacatua">Cacatua</item>
        <item android:id="@+id/agapornis">Agapornis</item>
    </string-array>
    <string-array name="raca_outros">
        <item android:id="@+id/selecione_um_item">Selecione um Item</item>
    </string-array>
</resources>