<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BACKGROUNDGRADIENT"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/voltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/voltar"
            android:textSize="70sp"
            app:layout_constraintEnd_toStartOf="@+id/pets"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="-33dp" />

        <ImageView
            android:id="@+id/pets"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:src="@drawable/imagem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <!-- Campo Nome -->
        <EditText
            android:id="@+id/nome"
            style="@style/HINTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_edit_text"
            android:hint="Nome completo"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pets"
            tools:ignore="MissingConstraints,TextFields" />

        <EditText
            android:id="@+id/email"
            style="@style/HINTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            tools:ignore="MissingConstraints,TextFields" />

        <EditText
            android:id="@+id/senha"
            style="@style/HINTCOLOR"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="216dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/senha"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.444"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.067"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/senha"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/conter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/conter"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/minimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/minimo"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/caracter_especial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/caracter_especial"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/letra_maiscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/letra_maiscula"
                android:textAlignment="center"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/letra_minuscula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/letra_minuscula"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/criar_conta"
            style="@style/BUTTON"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#2196FF"
            android:text="@string/criar_conta"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>