<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BACKGROUND"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/pets"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/email"
        style="@style/HINTCOLOR"
        android:layout_width="306dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edit_text"
        android:backgroundTint="#a6a6a6"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pets"
        tools:ignore="MissingConstraints,TextFields" />

    <EditText
        android:id="@+id/senha"
        style="@style/HINTCOLOR"
        android:layout_width="306dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_edit_text"
        android:backgroundTint="#a6a6a6"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textDirection="firstStrong"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/acessar"
        style="@style/BUTTON"
        android:layout_width="304dp"
        android:layout_height="64dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/acessar"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/criar"
        style="@style/LINK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crie_conta"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acessar"
        app:layout_constraintVertical_bias="0.102"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>